Bug 74066: clean up duplicate imports and use .toList() in CategoricalShapeFrame
- Remove duplicate imports of DefaultComparator, Logger, LoggerFactory
  (pre-existing issue cleaned up while file is being touched).
- Replace .collect(Collectors.toList()) with .toList() (Java 21 style);
  also removes the now-unused Collectors import.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>